--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <!-- Strings used for fragments for navigation -->
     <string name="login_fragment_label">Login</string>
     <string name="welcome_fragment_label">Welcome</string>
+    <string name="shoes_list_fragment_label">Shoes List</string>
 
     <!-- Login Fragment -->
     <string name="sign_in">Sign In</string>
@@ -51,4 +52,7 @@
     <string name="user_name">User Name</string>
     <string name="password">Password</string>
     <string name="welcome">Welcome!</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
