--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">Shoe Store</string>
     <string name="action_settings">Settings</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
@@ -45,6 +43,7 @@
     <string name="login_fragment_label">Login</string>
     <string name="welcome_fragment_label">Welcome</string>
     <string name="shoes_list_fragment_label">Shoes List</string>
+    <string name="instructions_fragment_label">Instructions</string>
 
     <!-- Login Fragment -->
     <string name="sign_in">Sign In</string>
@@ -53,6 +52,10 @@
     <string name="password">Password</string>
     <string name="welcome">Welcome!</string>
 
+    <!-- Welcome Fragment-->
+    <string name="instructions">Instructions</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
 </resources>
