--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,8 +42,9 @@
     <!-- Strings used for fragments for navigation -->
     <string name="login_fragment_label">Login</string>
     <string name="welcome_fragment_label">Welcome</string>
-    <string name="shoes_list_fragment_label">Shoes List</string>
     <string name="instructions_fragment_label">Instructions</string>
+    <string name="shoes_list_fragment_label">Shoes List</string>
+    <string name="show_details_fragment_label">Shoe Details</string>
 
     <!-- Login Fragment -->
     <string name="sign_in">Sign In</string>
@@ -61,7 +62,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
 
 
 </resources>
