--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
 
     <!-- Shoes List Fragment -->
     <string name="action_logout">Logout</string>
+    <string name="desc_add_shoe">Add shoe</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
